--- a/theme/styles/layouts.css
+++ b/theme/styles/layouts.css
@@ -37,6 +37,10 @@
     @apply text-sm pt-1 uppercase tracking-widest font-500 -ml-[0.05em];
   }
 
+  p.cite{
+    @apply text-xs italic;
+  }
+
   h6:not(.opacity-100) {
     @apply opacity-40;
   }
